# project-devShells

./: README.md
python-basic/: README.md  pyproject.toml
python-basic/.nix/: flake.nix
python-ml/: README.md  pyproject.toml
python-ml/.nix/: flake.nix
