[project]
name = "project_name"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Akshit Gaur", email = "akshitgaur@protonmail.com"},
]
dependencies = [
    "numpy>=2.1.1",
    "torch>=2.4.1",
    "pandas>=2.2.3",
    "seaborn"
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
